Fix market-data service missing getStockPrice and portfolio service Java 17 compatibility